syntax = "proto3";

package hadron.places.v1;

import "google/protobuf/timestamp.proto";
import "hadron/places/v1/enum.proto";

option go_package="event-schema-registry/placespb;placespb";

message AppointmentScheduledEvent {
  string appointment_id = 1;
  string place_id = 2;
  string title = 3;
  optional string targeted_to = 4;
  string scheduled_by = 5;
  google.protobuf.Timestamp scheduled_time = 6;
  optional string notes = 7;
  AppointmentStatus status = 8;
  google.protobuf.Timestamp create_time = 9;
  string create_by = 10;
}

message AppointmentUpdatedEvent {
  string appointment_id = 1;
  string place_id = 2;
  string title = 3;
  optional string targeted_to = 4;
  string scheduled_by = 5;
  google.protobuf.Timestamp scheduled_time = 6;
  optional string notes = 7;
  AppointmentStatus status = 8;
  google.protobuf.Timestamp create_time = 9;
  string create_by = 10;
  google.protobuf.Timestamp update_time = 11;
  string update_by = 12;
}

message AppointmentCanceledEvent {
  string appointment_id = 1;
  string place_id = 2;
  optional string notes = 3;
  AppointmentStatus status = 4;
  google.protobuf.Timestamp cancel_time = 9;
  string cancel_by = 10;
}

message AppointmentRescheduledEvent {
  string appointment_id = 1;
  string place_id = 2;
  google.protobuf.Timestamp scheduled_time = 3;
  optional string notes = 4;
  AppointmentStatus status = 5;
  google.protobuf.Timestamp reschedule_time = 6;
  string reschedule_by = 7;
}

message AppointmentDeletedEvent {
  string appointment_id = 1;
  string place_id = 2;
  google.protobuf.Timestamp delete_time = 3;
  string delete_by = 4;
}

message AppointmentCompletedEvent {
  string appointment_id = 1;
  string place_id = 2;
  AppointmentStatus status = 3;
  google.protobuf.Timestamp complete_time = 4;
  string marked_as_complete_by = 5;
}
